--- a/views/index.html
+++ b/views/index.html
@@ -33,14 +33,14 @@
 
             var materialOptions = {
               chart: {
-                title: "Population of Countries"
+                title: "Population of Countries (Millions)"
               },
               hAxis: {
-                title: "Total Population",
+                title: "Total Population (Millions)",
                 minValue: 0
               },
               vAxis: {
-                title: "City"
+                title: "Country"
               },
               bars: "horizontal"
             };
